5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1859_2218.log
== TEST (2019-06-26 14:20:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if(i < j):
			acum = acum
		elif(i > j):
			acum = acum
		else:
			acum = acum + acum 
print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:20:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if(i < j):
			acum = acum
		elif(i > j):
			acum = acum
		else:
			acum = acum + acum 
print(round(acum,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:22:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if(a.all(i < j)):
			acum = acum
		elif(a.all(i > j):
			acum = acum
		else:
			acum = acum + acum 
print(round(acum,2))
-- ERROR:
File "XXXX", line 9
    elif(a.all(i > j):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:22:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if(a.all()i < j):
			acum = acum
		elif(a.all()i > j):
			acum = acum
		else:
			acum = acum + acum 
print(round(acum,2))
-- ERROR:
File "XXXX", line 7
    if(a.all()i < j):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:24:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if(i == j):
			acum = m[i,j] sum()
print(round(acum,2))
-- ERROR:
File "XXXX", line 8
    acum = m[i,j] sum()
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:24:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if(i == j):
			acum = m[i,j]sum()
print(round(acum,2))
-- ERROR:
File "XXXX", line 8
    acum = m[i,j]sum()
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:24:22) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if(i == j):
			acum = m[i,j]sum()
print(round(acum,2))
-- EXECUTION TIME:
0.813825
-- ERROR:
  File "/home/codebench/codes/1859/2218/main.py", line 8
    acum = m[i,j]sum()
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:24:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if(i == j):
			acum = sum()m[i,j]
print(round(acum,2))
-- ERROR:
File "XXXX", line 8
    acum = sum()m[i,j]
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:29:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if(i == j):
			acum = acum + m[i,j]
print(round(acum,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:29:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if(i == j):
			acum = acum + m[i,j]
print(round(acum,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:29:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if(i == j):
			acum = acum + m[i,j]
print(round(acum,2))
-- EXECUTION TIME:
0.882354
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/2218/main.py", line 7, in <module>
    if(i == j):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:29:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if(i == j):
			acum = acum + m[i,j]
print(round(acum,2))
-- EXECUTION TIME:
2.29825
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/2218/main.py", line 7, in <module>
    if(i == j):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:29:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if(i == j):
			acum = acum + m[i,j]
print(round(acum,2))
-- EXECUTION TIME:
1.99448
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1859/2218/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:30:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if((i == j)a.all()):
			acum = acum + m[i,j]
print(round(acum,2))
-- ERROR:
File "XXXX", line 7
    if((i == j)a.all()):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:30:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in m:
	for j in m:
		if((i == j)a.all()):
			acum = acum + m[i,j]
print(round(acum,2))
-- EXECUTION TIME:
0.81619
-- ERROR:
  File "/home/codebench/codes/1859/2218/main.py", line 7
    if((i == j)a.all()):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:31:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in len(m):
	for j in len(m):
		if(i == j):
			acum = acum + m[i,j]
print(round(acum,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:31:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in len(m):
	for j in len(m):
		if(i == j):
			acum = acum + m[i,j]
print(round(acum,2))
-- EXECUTION TIME:
1.23749
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/2218/main.py", line 5, in <module>
    for i in len(m):
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:31:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in len(m):
	for j in len(m):
		if(i == j):
			acum = acum + m[i,j]
print(round(acum,2))
-- EXECUTION TIME:
2.9522
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/2218/main.py", line 5, in <module>
    for i in len(m):
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:31:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
acum = 0
for i in len(m):
	for j in len(m):
		if(i == j):
			acum = acum + m[i,j]
print(round(acum,2))
-- EXECUTION TIME:
1.14182
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/2218/main.py", line 5, in <module>
    for i in len(m):
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:47:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:50:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in len(m):
	for j in len(m):
		if(i == j):
			print(sum(m[i,j]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:50:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in len(m):
	for j in len(m):
		if(i == j):
			print(sum(m[i,j]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:50:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in len(m):
	for j in len(m):
		if(i == j):
			print(sum(m[i,j]))
-- EXECUTION TIME:
0.852188
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/2218/main.py", line 4, in <module>
    for i in len(m):
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:50:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in len(m):
	for j in len(m):
		if(i == j):
			print(sum(m[i,j]))
-- EXECUTION TIME:
2.96231
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/2218/main.py", line 4, in <module>
    for i in len(m):
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:50:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in len(m):
	for j in len(m):
		if(i == j):
			print(sum(m[i,j]))
-- EXECUTION TIME:
2.80642
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1859/2218/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:50:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in len(m):
	for j in len(m):
		if(i == j):
			print(sum(m[i,j]))
-- EXECUTION TIME:
3.74521
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/2218/main.py", line 4, in <module>
    for i in len(m):
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:50:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in len(m):
	for j in len(m):
		if(i == j):
			print(round(sum(m[i,j]),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:50:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in len(m):
	for j in len(m):
		if(i == j):
			print(round(sum(m[i,j]),2))
-- EXECUTION TIME:
1.20986
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/2218/main.py", line 4, in <module>
    for i in len(m):
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
